# streamlit-experiments

./: .gitignore  pyproject.toml  requirements.txt
chatgpt-clone/: app.py  pyproject.toml
chatgpt-clone-using-cosmosdb/: .env.example  app.py  cosmosdb.py  get-authorization.ps1  pyproject.toml  test.http
chatgpt-clone-using-local-json/: app.py  pyproject.toml
