[project]
name = "streamlit-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.19.0",
    "fastapi>=0.115.6",
    "openai>=1.59.3",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["chatgpt-clone", "chatgpt-clone-v2", "chatgpt-clone-using-cosmosdb"]
